Revision history for Cache

1.00 in progress
 - localized scope of global file and directory handles (FILE and DIR)
 - applied Jonathan Swartz's patch for a much better untainting regex
 - changed _Untaint_String to throw an exception on a taint
 - further improved the fix to prevent race conditions that caused the
   tests to fail
 - exposed the get_namespaces method on Cache

0.99 2001-12-09-18-45
 - released version 0.99
 - major refactoring of code
 - replaced non-standard usage of SUCCESS and FAILURE with Error.pm
 - replaced non-standard usage of TRUE and FALSE with 1 and 0 
 - migrated from the term "identifier" to the more standard term "key"
   and marked the old public methods with identifier as deprecated
 - broke out the MemoryBackend, FileBackend, SharedMemoryBackend into 
   distinct and reusable classes
 - fixed a long outstanding bug in the unit tests that made working
   caches appear to fail
 - changed the meaning of object and cache size for file system based
   caches to consistently reflect the total size of the objects on disk,
   but not including the directory overhead
 - changed format of persisted data in the FileBackend
 - major rewrite of documentation

0.09 2001-09-10-12-10
 - released version 0.09
 - applied Axel Beckert patch to fix the expiration units
 - applied Ken Williams's directory creation patch to pass all tests
 - changed the license to be either the GPL or the Artistic license
 - added Jay Sachs' implementation of NullCache
 - modified the remove methods to avoid croaking if two cache
   instances are both purging or limiting at the same time
 - migrated to a factory-like model with private contructors
   to fix the auto_purge_interval functionality
 - updated the documentation to better reflect that size means
   size in bytes
 - started version 0.09

0.08 2001-04-26-08-53
 - released version 0.08
 - renamed the auto_purge option to auto_purge_interval
 - added the auto_purge_on_set and auto_purge_on_get options